// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterExists /> should select "Exists" 1`] = `
.emotion-21 {
  border-radius: 2px;
  background-color: #191919;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-21:hover summary svg {
  opacity: 1;
}

.emotion-9 {
  list-style-type: none;
  padding: 8px;
  background-color: #252525;
}

.emotion-9::-webkit-details-marker {
  display: none;
}

.emotion-9:hover {
  cursor: pointer;
  background-color: #2e2e2e;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  color: #808080;
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-top: -2px;
  padding-left: 8px;
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
  padding-right: 4px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 4px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus {
  color: #ffffff;
}

.emotion-4:hover svg,
.emotion-4.focus-visible:focus svg {
  opacity: 1;
}

.emotion-4[aria-disabled=true] {
  color: #808080;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus {
  background-color: #3b3b3b;
}

.emotion-4:hover svg,
.emotion-4.focus-visible:focus svg {
  color: #ffffff;
}

.emotion-3 {
  opacity: 0;
}

.emotion-20 {
  max-height: 500px;
  overflow-y: auto;
}

.emotion-19 {
  padding: 16px;
}

.emotion-18 {
  padding-top: 8px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #808080;
  border-radius: 2px;
}

.emotion-15 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-radius: 0;
  padding: 12px;
  background-color: #808080;
  color: #ffffff;
}

.emotion-15:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-15:hover,
.emotion-15.focus-visible:focus {
  color: #ffffff;
}

.emotion-15:hover svg,
.emotion-15.focus-visible:focus svg {
  opacity: 1;
}

.emotion-15[aria-disabled=true] {
  color: #808080;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10 {
  padding-left: 4px;
}

.emotion-12 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-radius: 0;
  padding: 12px;
  background-color: transparent;
  color: #808080;
}

.emotion-12:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-12:hover,
.emotion-12.focus-visible:focus {
  color: #ffffff;
}

.emotion-12:hover svg,
.emotion-12.focus-visible:focus svg {
  opacity: 1;
}

.emotion-12[aria-disabled=true] {
  color: #808080;
}

.emotion-17 {
  color: #808080;
  text-align: center;
  padding-top: 8px;
}

<details
  className="emotion-21"
  onToggle={[Function]}
  open={true}
>
  <summary
    aria-label="location.point"
    className="emotion-9"
  >
    <div
      className="emotion-8"
    >
      <svg
        className="emotion-0"
        data-file-name="chevron.svg"
        height={20}
      />
      <span
        className="emotion-1"
      >
        <svg
          color="#73b61c"
          data-file-name="missing.svg"
          height={20}
        />
      </span>
      <span
        className="emotion-2"
      >
        location.point
      </span>
      <div
        className="emotion-7"
      >
        <button
          aria-label="Disable Filter"
          className="emotion-4"
          onClick={[Function]}
          title="Disable Filter"
          type="button"
        >
          <svg
            className="emotion-3"
            color="#808080"
            data-file-name="hidden.svg"
            height={20}
          />
        </button>
        <button
          aria-label="Delete Filter"
          className="emotion-4"
          onClick={[Function]}
          title="Delete Filter"
          type="button"
        >
          <svg
            className="emotion-3"
            color="#808080"
            data-file-name="cross.svg"
            height={20}
          />
        </button>
      </div>
    </div>
  </summary>
  <div
    className="emotion-20"
  >
    <div
      className="emotion-19"
    >
      <FilterReset
        assetId=""
        filter={
          Object {
            "attribute": "location.point",
            "type": "exists",
            "values": Object {
              "exists": false,
            },
          }
        }
        filterIndex={0}
        filters={
          Array [
            Object {
              "attribute": "location.point",
              "type": "exists",
              "values": Object {
                "exists": false,
              },
            },
          ]
        }
        onReset={[Function]}
        pathname="/[projectId]/visualizer"
        projectId="76917058-b147-4556-987a-0a0f11e46d9b"
      />
      <div
        className="emotion-18"
      >
        <div
          className="emotion-16"
        >
          <button
            aria-label="Exists"
            className="emotion-12"
            onClick={[Function]}
            type="button"
          >
            <div
              className="emotion-11"
            >
              <svg
                data-file-name="exists.svg"
                height={20}
              />
              <div
                className="emotion-10"
              >
                Exists
              </div>
            </div>
          </button>
          <button
            aria-label="Missing"
            className="emotion-15"
            onClick={[Function]}
            type="button"
          >
            <div
              className="emotion-11"
            >
              <svg
                data-file-name="missing.svg"
                height={20}
              />
              <div
                className="emotion-10"
              >
                Missing
              </div>
            </div>
          </button>
        </div>
        <div
          className="emotion-17"
        >
          <span>
            Show assets 
            <u>
              missing
            </u>
             the field "
            location.point
            "
          </span>
        </div>
      </div>
    </div>
  </div>
</details>
`;

exports[`<FilterExists /> should select "Missing" 1`] = `
.emotion-21 {
  border-radius: 2px;
  background-color: #191919;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-21:hover summary svg {
  opacity: 1;
}

.emotion-9 {
  list-style-type: none;
  padding: 8px;
  background-color: #252525;
}

.emotion-9::-webkit-details-marker {
  display: none;
}

.emotion-9:hover {
  cursor: pointer;
  background-color: #2e2e2e;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  color: #808080;
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-top: -2px;
  padding-left: 8px;
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
  padding-right: 4px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 4px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus {
  color: #ffffff;
}

.emotion-4:hover svg,
.emotion-4.focus-visible:focus svg {
  opacity: 1;
}

.emotion-4[aria-disabled=true] {
  color: #808080;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus {
  background-color: #3b3b3b;
}

.emotion-4:hover svg,
.emotion-4.focus-visible:focus svg {
  color: #ffffff;
}

.emotion-3 {
  opacity: 0;
}

.emotion-20 {
  max-height: 500px;
  overflow-y: auto;
}

.emotion-19 {
  padding: 16px;
}

.emotion-18 {
  padding-top: 8px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #808080;
  border-radius: 2px;
}

.emotion-12 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-radius: 0;
  padding: 12px;
  background-color: #808080;
  color: #ffffff;
}

.emotion-12:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-12:hover,
.emotion-12.focus-visible:focus {
  color: #ffffff;
}

.emotion-12:hover svg,
.emotion-12.focus-visible:focus svg {
  opacity: 1;
}

.emotion-12[aria-disabled=true] {
  color: #808080;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10 {
  padding-left: 4px;
}

.emotion-15 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-radius: 0;
  padding: 12px;
  background-color: transparent;
  color: #808080;
}

.emotion-15:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-15:hover,
.emotion-15.focus-visible:focus {
  color: #ffffff;
}

.emotion-15:hover svg,
.emotion-15.focus-visible:focus svg {
  opacity: 1;
}

.emotion-15[aria-disabled=true] {
  color: #808080;
}

.emotion-17 {
  color: #808080;
  text-align: center;
  padding-top: 8px;
}

<details
  className="emotion-21"
  onToggle={[Function]}
  open={true}
>
  <summary
    aria-label="location.point"
    className="emotion-9"
  >
    <div
      className="emotion-8"
    >
      <svg
        className="emotion-0"
        data-file-name="chevron.svg"
        height={20}
      />
      <span
        className="emotion-1"
      >
        <svg
          color="#73b61c"
          data-file-name="exists.svg"
          height={20}
        />
      </span>
      <span
        className="emotion-2"
      >
        location.point
      </span>
      <div
        className="emotion-7"
      >
        <button
          aria-label="Disable Filter"
          className="emotion-4"
          onClick={[Function]}
          title="Disable Filter"
          type="button"
        >
          <svg
            className="emotion-3"
            color="#808080"
            data-file-name="hidden.svg"
            height={20}
          />
        </button>
        <button
          aria-label="Delete Filter"
          className="emotion-4"
          onClick={[Function]}
          title="Delete Filter"
          type="button"
        >
          <svg
            className="emotion-3"
            color="#808080"
            data-file-name="cross.svg"
            height={20}
          />
        </button>
      </div>
    </div>
  </summary>
  <div
    className="emotion-20"
  >
    <div
      className="emotion-19"
    >
      <FilterReset
        assetId=""
        filter={
          Object {
            "attribute": "location.point",
            "type": "exists",
            "values": Object {
              "exists": true,
            },
          }
        }
        filterIndex={0}
        filters={
          Array [
            Object {
              "attribute": "location.point",
              "type": "exists",
              "values": Object {
                "exists": true,
              },
            },
          ]
        }
        onReset={[Function]}
        pathname="/[projectId]/visualizer"
        projectId="76917058-b147-4556-987a-0a0f11e46d9b"
      />
      <div
        className="emotion-18"
      >
        <div
          className="emotion-16"
        >
          <button
            aria-label="Exists"
            className="emotion-12"
            onClick={[Function]}
            type="button"
          >
            <div
              className="emotion-11"
            >
              <svg
                data-file-name="exists.svg"
                height={20}
              />
              <div
                className="emotion-10"
              >
                Exists
              </div>
            </div>
          </button>
          <button
            aria-label="Missing"
            className="emotion-15"
            onClick={[Function]}
            type="button"
          >
            <div
              className="emotion-11"
            >
              <svg
                data-file-name="missing.svg"
                height={20}
              />
              <div
                className="emotion-10"
              >
                Missing
              </div>
            </div>
          </button>
        </div>
        <div
          className="emotion-17"
        >
          <span>
            Show assets with the field "
            location.point
            "
          </span>
        </div>
      </div>
    </div>
  </div>
</details>
`;
